# ApiFrame

./: .gitignore  .travis.yml  README.md  pyproject.toml
api/: api.py
tests/: conftest.py  test_core.py
tests/api/: httpbin.py
