[tool.poetry]
name = "apiframe"
version = "0.1.0"
description = ""
authors = ["zyanwei2011 <zyanwei2011@163.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^6.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
